# aquafix

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
aquafix/: asgi.py  settings.py  urls.py  wsgi.py
services/: admin.py  models.py  serializers.py  views.py
services/migrations/: 0001_initial.py
