[tool.poetry]
name = "aquafix"
version = "0.1.0"
description = ""
authors = ["Vlad Kravchuk <vladyslavkrav6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^6.0.4"
djangorestframework = "^3.17.1"
psycopg2-binary = "^2.9.12"
python-dotenv = "^1.2.2"
djangorestframework-stubs = "^3.16.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
